--- a/src/main/java/com/techmine/gs/ui/pages/splashpage/SplashPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/splashpage/SplashPage.html
@@ -23,7 +23,7 @@ limitations under the License.
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <title>Gas Supply</title>
-        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" />
 
         <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/lib/w3.css"/>
         <link rel="stylesheet" type="text/css" href="SplashPage.css"/>
