Added header to page and commented out the previous header.

--- a/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
@@ -20,11 +20,16 @@ limitations under the License.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>TODO supply a title</title>
         <link href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
 
     </head>
     <body style="max-width: 1200px; margin: auto">
-        <header class="w3-panel w3-center w3-green w3-row">
+        <header class="w3-container  w3-theme-d1 w3-center">
+            <label class="w3-text-light-grey w3-large">Gas Supplies Cylinder Management</label>
+        </header>
+
+        <!--header class="w3-panel w3-center w3-green w3-row">
 
             <div class="" style="width: 50px">
                 <button class="w3-button w3-xlarge " onclick="w3_open()">&#9776;</button>
@@ -33,7 +38,7 @@ limitations under the License.
                 <h1>Gas Supplies Cylinder Management</h1>
             </div>
 
-        </header>
+        </header-->
 
         <wicket:child/>
         <footer class="w3-panel w3-display-bottommiddle">
@@ -43,6 +48,6 @@ limitations under the License.
 
 </html>
 <script>
-       const d = new Date();
-       document.getElementById("date").innerHTML=d;
+    const d = new Date();
+    document.getElementById("date").innerHTML = d;
 </script>
