--- a/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
@@ -19,7 +19,7 @@ limitations under the License.
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>TODO supply a title</title>
-        <link href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/>
+        <!--link href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/-->
         <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
 
