--- a/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
@@ -16,19 +16,18 @@ limitations under the License.
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>TODO supply a title</title>
-        <!--link href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/-->
         <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
-
     </head>
     <body style="max-width: 1200px; margin: auto">
         <header class="w3-container  w3-theme-d1 w3-center">
             <label class="w3-text-light-grey w3-large">Gas Supplies Cylinder Management</label>
         </header>
-
+        <wicket:panel wicket:id="menubar"></wicket:panel>
+        </div>
         <!--header class="w3-panel w3-center w3-green w3-row">
 
             <div class="" style="width: 50px">
