--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -24,20 +24,22 @@ limitations under the License.
 
     </head>
     <body>
-        <div class="w3-container">
-            <div class="w3-bar w3-black">
-                <a href="#" class="w3-bar-item w3-button w3-mobile w3-green">Home</a>
-                <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-                <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
-                <div class="w3-dropdown-hover w3-mobile">
-                    <button class="w3-button">Dropdown <i class="fa fa-caret-down"></i></button>
-                    <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
-                        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+        <wicket:panel>
+            <div class="w3-container">
+                <div class="w3-bar w3-black">
+                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-green">Home</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+                    <div class="w3-dropdown-hover w3-mobile">
+                        <button class="w3-button">Dropdown <i class="fa fa-caret-down"></i></button>
+                        <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </wicket:panel>
     </body>
 </html>
