added home icon

--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -27,7 +27,7 @@ limitations under the License.
         <wicket:panel>
             <div class="w3-container">
                 <div class="w3-bar w3-black">
-                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-green">Home</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-green material-icons" >home</a>
                     <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
                     <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
                     <div class="w3-dropdown-hover w3-mobile">
