--- a/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
@@ -26,8 +26,11 @@ limitations under the License.
         <header class="w3-container  w3-theme-d1 w3-center">
             <label class="w3-text-light-grey w3-large">Gas Supplies Cylinder Management</label>
         </header>
-        <div wicket:id="menubar"></div>
+        <div wicket:id="menubar" class="w3-stretch"></div>
 
+        // now to set the place for the body of the page
+
+        <div wicket:id="body"></div>
         <!--header class="w3-panel w3-center w3-green w3-row">
 
             <div class="" style="width: 50px">
