--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -16,12 +16,12 @@ limitations under the License.
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
-        <title>TODO supply a title</title>
+
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
-
+        <title>Something</title>
     </head>
     <body>
         <wicket:panel>
@@ -31,7 +31,7 @@ limitations under the License.
                     <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
                     <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
                     <div class="w3-dropdown-hover w3-mobile">
-                        <button class="w3-button">Dropdown <i class="fa fa-caret-down"></i></button>
+                        <button class="w3-button">System <i class="fa fa-caret-down"></i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
