--- a/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
@@ -22,13 +22,13 @@ limitations under the License.
         <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
     </head>
-    <body style="max-width: 1200px; margin: auto">
+    <body style="max-width: 1200px; margin: auto" >
         <header class="w3-container  w3-theme-d1 w3-center">
             <label class="w3-text-light-grey w3-large">Gas Supplies Cylinder Management</label>
         </header>
         <div wicket:id="menubar" class="w3-stretch"></div>
 
-        // now to set the place for the body of the page
+        <!-- now to set the place for the body of the page -->
 
         <div wicket:id="body"></div>
         <!--header class="w3-panel w3-center w3-green w3-row">
