Set background colors for and header colors UnAuthenticatedBasePage and SignIn page

--- a/src/main/java/com/techmine/gs/ui/pages/authenticated_base_page/AuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/authenticated_base_page/AuthenticatedBasePage.html
@@ -19,7 +19,7 @@ limitations under the License.
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../../../../../webapp/resources/css/w3.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <wicket:extends>
