--- a/src/main/java/com/techmine/gs/ui/pages/loginpage/LoginPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/loginpage/LoginPage.html
@@ -19,7 +19,7 @@ limitations under the License.
         <title>TODO supply a title</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
         <link rel="stylesheet" href="LoginPage.css"/>
-        <link rel="stylesheet" href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" type="text/css"/>
+        <link rel="stylesheet" href="../../../../../../../webapp/resources/css/w3.css" type="text/css"/>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
