--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -28,10 +28,18 @@ limitations under the License.
             <div class="w3-container">
                 <div class="w3-bar w3-black">
                     <a href="#" class="w3-bar-item w3-button w3-mobile w3-green material-icons" >home</a>
-                    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-                    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hide-small">Link 1</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hide-small">Link 2</a>
                     <div class="w3-dropdown-hover w3-mobile">
                         <button class="w3-button">System <i class="fa fa-caret-down"></i></button>
+                        <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+                        </div>
+                    </div>
+                    <div class="w3-dropdown-hover w3-mobile">
+                        <button class="w3-button">Operations <i class="fa fa-caret-down"></i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
