--- a/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
@@ -20,7 +20,7 @@ limitations under the License.
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
-        <link href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../../../../../webapp/resources/css/w3.css" rel="stylesheet" type="text/css"/>
         <style>
             input {
                 max-width: 300px;
