--- a/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/unauthenticated_base_page/UnAuthenticatedBasePage.html
@@ -19,12 +19,12 @@ limitations under the License.
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+        <!--link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/-->
     </head>
     <body style="max-width: 1200px; margin: auto" >
-        <header class="w3-container  w3-theme-d1 w3-center">
-            <label class="w3-text-light-grey w3-large">Gas Supplies Cylinder Management</label>
+        <header class="w3-container  w3-theme-d1 w3-center w3-cursive">
+            <label class="w3-text-light-grey w3-xlarge">Gas Supplies Cylinder Management</label>
         </header>
         <div wicket:id="menubar" class="w3-stretch"></div>
 
