--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -23,7 +23,7 @@ limitations under the License.
     <body>
         <wicket:panel>
             <form class="w3-container w3-display-middle w3-theme-l5 w3-card">
-                <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey w3-large">Sign In</header>
+                <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey w3-large w3-wide">Sign In</header>
 
                 <section class="w3-panel">
                     <div>
@@ -38,7 +38,7 @@ limitations under the License.
                 </section>
                 <footer class="w3-panel w3-stretch w3-center">
                     <div>
-                        <button type="submit" class="w3-button w3-theme-d1"> Login </button>
+                        <button type="submit" class="w3-button w3-hover-theme"> Login </button>
                     </div>
                     <div>
                         <label>
