add .fit-menu to check in and check out

--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -27,11 +27,11 @@ limitations under the License.
         <wicket:panel>
             <div class="w3-container">
                 <div class="w3-bar w3-black">
-                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-green material-icons" >home</a>
-                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hide-small">Link 1</a>
-                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hide-small">Link 2</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile  material-icons" >home</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hide-small fit-menu">Check In</a>
+                    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hide-small fit-menu ">Check Out</a>
                     <div class="w3-dropdown-hover w3-mobile">
-                        <button class="w3-button">System <i class="fa fa-caret-down"></i></button>
+                        <button class="w3-button">System <i class="material-icons">arrow_drop_down</i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
@@ -39,7 +39,7 @@ limitations under the License.
                         </div>
                     </div>
                     <div class="w3-dropdown-hover w3-mobile">
-                        <button class="w3-button">Operations <i class="fa fa-caret-down"></i></button>
+                        <button class="w3-button">Operations <i class="material-icons">arrow_drop_down</i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
