--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -22,17 +22,17 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <form class="w3-container w3-display-middle w3-theme-l5 w3-card">
+            <form  wicket:id="signInForm" class="w3-container w3-display-middle w3-theme-l5 w3-card">
                 <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey w3-large w3-wide">Sign In</header>
 
                 <section class="w3-panel">
                     <div>
                         <label for="username"> <b> Username </b> </label>
-                        <input class="w3-input w3-transparent" id="username" type="text" placeholder="Enter Username" name="username" required>
+                        <input class="w3-input w3-transparent" wicket:id="userName" type="text" placeholder="Enter Username" name="username" required>
                     </div>
                     <div>
                         <label for="password"> <b> Password </b> </label>
-                        <input  class="w3-input w3-transparent"  id="password" type="password" name="password" required>
+                        <input  class="w3-input w3-transparent"   wicket:id="password" type="password" name="password" required>
                     </div>
 
                 </section>
