deleted style in body of page, violates Content Security Policy

--- a/src/main/java/com/techmine/gs/ui/pages/IndexPage/IndexPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/IndexPage/IndexPage.html
@@ -16,14 +16,13 @@ limitations under the License.
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
+
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <!--link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-orange.css"/>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/-->
 
     </head>
-    <body style="max-width: 1200px; margin: auto" >
+    <body >
         <header class="w3-container  w3-theme-d1 w3-center w3-cursive">
             <label class="w3-text-light-grey w3-xlarge">Gas Supplies Cylinder Management</label>
         </header>
