Add login user name and password for testers to user on the panel

--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -32,10 +32,12 @@ limitations under the License.
                     <div>
                         <label for="username"> <b> Username </b> </label>
                         <input class="w3-input w3-transparent" wicket:id="userName" type="text" placeholder="Enter Username" name="username" required="true"/>
+                        use Administrator
                     </div>
                     <div>
                         <label for="password"> <b> Password </b> </label>
                         <input  class="w3-input w3-transparent"   wicket:id="password" type="password" name="password"/>
+                        user Password
                     </div>
 
                 </section>
