--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -33,16 +33,21 @@ limitations under the License.
                     <div class="w3-dropdown-hover w3-mobile">
                         <button class="w3-button">System <i class="material-icons">arrow_drop_down</i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Users</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Gas Types</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Cylinders</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Customers</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">System Setup</a>
+
                         </div>
                     </div>
                     <div class="w3-dropdown-hover w3-mobile">
                         <button class="w3-button">Operations <i class="material-icons">arrow_drop_down</i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Check In</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Check Out</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+                            <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
                         </div>
                     </div>
