Add link to Menu Panel to do logout

--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -51,6 +51,7 @@ limitations under the License.
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
                         </div>
                     </div>
+                    <a wicket:id="logout" class="w3-button w3-bar-item w3-right w3-mobile fit-menu">Sign Out</a>
                 </div>
             </div>
         </wicket:panel>
