Resolved Menu not loading added setVisible to indexPage#routeTo

--- a/src/main/java/com/techmine/gs/ui/pages/IndexPage/IndexPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/IndexPage/IndexPage.html
@@ -26,6 +26,7 @@ limitations under the License.
         <header class="w3-container  w3-theme-d1 w3-center w3-cursive">
             <label class="w3-text-light-grey w3-xlarge">Gas Supplies Cylinder Management</label>
         </header>
+        <!--The Menu bar area -->
         <div wicket:id="menubar" class="w3-stretch"></div>
 
         <!-- now to set the place for the body of the page -->
