--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -47,7 +47,7 @@ limitations under the License.
                     </div>
                     <div>
                         <label>
-                            <input class="w3-check"  type="checkbox" checked="checked" name="rememberMe"> Remember Me
+                            <input class="w3-check"  type="checkbox" checked="checked" name="rememberMe"/> Remember Me
                         </label>
                     </div>
                 </footer>
