Made changes so jax works.  May separate Index page from page after login.

--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -43,7 +43,7 @@ limitations under the License.
                 </section>
                 <footer class="w3-panel w3-stretch w3-center">
                     <div>
-                        <button id="signIn" wicket:id="signIn" type="button" class="w3-button w3-hover-theme"> Login</button>
+                        <button id="signIn" wicket:id="signIn" type="submit" class="w3-button w3-hover-theme"> Login</button>
                     </div>
                     <div>
                         <label>
