--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -33,7 +33,7 @@ limitations under the License.
                     <div class="w3-dropdown-hover w3-mobile">
                         <button class="w3-button">System <i class="material-icons">arrow_drop_down</i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Users</a>
+                            <a wicket:id="users" class="w3-bar-item w3-button w3-mobile">Users</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Gas Types</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Cylinders</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Customers</a>
