--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -36,7 +36,7 @@ limitations under the License.
                     </div>
                     <div>
                         <label for="password"> <b> Password </b> </label>
-                        <input  class="w3-input w3-transparent"   wicket:id="password" type="password" name="password"/>
+                        <input  class="w3-input w3-transparent"   wicket:id="password" type="password" name="password" required="true"/>
                         user Password
                     </div>
 
