--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/TextFieldWFeedback.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/TextFieldWFeedback.html
@@ -19,14 +19,17 @@ limitations under the License.
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link href="TextFieldWFeedback.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <wicket:panel>
-            <div>
-                <input type="text" wicket:id="formComponent"/>
-                <label wicket:id="fieldLabel"></label>
+            <wicket:container>
+                <div class="control-group">
+                    <input class="form-control" placeholder="User Name" type="text" wicket:id="inputComponent"/>
+                    <label class="control-label" for="inputComponent" wicket:id="inputLabel">User Name</label>
+                </div>
                 <span wicket:id="feedback"></span>
-            </div>
+            </wicket:container>
         </wicket:panel>
     </body>
 </html>
