Feed back panel now appears in the correct place.

--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/TextFieldWFeedback.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/TextFieldWFeedback.html
@@ -23,13 +23,14 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <wicket:container>
-                <div class="control-group">
-                    <input class="form-control" placeholder="User Name" type="text" wicket:id="inputComponent"/>
-                    <label class="control-label" for="inputComponent" wicket:id="inputLabel">User Name</label>
-                </div>
-                <span wicket:id="feedback"></span>
-            </wicket:container>
+
+            <div class="control-group">
+                <input class="form-control" placeholder="User Name" type="text" wicket:id="inputComponent" />
+                <label class="control-label" for="inputComponent" wicket:id="inputLabel">User Name</label>
+                <div  wicket:id="feedback"></div>
+            </div>
+
+
         </wicket:panel>
     </body>
 </html>
