--- a/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
@@ -53,7 +53,25 @@ limitations under the License.
                     </div>
                     <div class="w3-margin-16">
                         <label>Country</label><br/>
-                        <input wicket:id="country" class="w3-input" type="text"/>
+                        <select wicket:id="country" class="w3-input" type="text"/>
+                            <option>Select a Country</option>
+                            <option>Antigua and Barbuda</option>
+                            <option>The Bahamas</option>
+                            <option>Barbados</option>
+                            <option>Belize</option>
+                            <option>Dominica</option>
+                            <option>Grenada</option>
+                            <option>Guyana</option>
+                            <option>Haiti</option>
+                            <option>Jamaica</option>
+                            <option>Monsterrat</option>
+                            <option>Saint Kitts and Nevis</option>
+                            <option>Saint Lucia</option>
+                            <option>Saint Vincent and the Grenadines</option>
+                            <option>Suriname</option>
+                            <option>Trinidad and Tobago</option>
+                            <option>Other</option>
+                        <select/>
                     </div>
                     <div class="w3-margin-16">
                         <label>Telephone 1</label><br/>
