replaced Fields removed during a debug session

--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/AbstractInputFieldWFeedbackAndCaption.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/AbstractInputFieldWFeedbackAndCaption.html
@@ -26,7 +26,7 @@ limitations under the License.
         <wicket:panel>
             <div class="control-group">
                 <!-- replace input tage with <wicket:child/>  which will be replaced in child derived compnoent -->
-                <!--input class="form-control" placeholder="User Name" type="text" wicket:id="inputComponent" /-->
+                <!--input class="form-control" placeholder="User Name" wicket:id="inputComponent"/-->
                 <wicket:child/>
                 <label class="control-label" for="inputComponent" wicket:id="fieldCaption">User Name</label>
                 <div  wicket:id="errorMessage"></div>
