has an email input tag

--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/EmailTextFieldWFeedback.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/EmailTextFieldWFeedback.html
@@ -21,6 +21,8 @@ limitations under the License.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <wicket:extend>
+            <input type="password" wicket:id="inputComponent" minlength="8"/>
+        </wicket:extend>
     </body>
 </html>
