User Editor now displays and verifies required fields.   Does not persists yet. nor cancel or new.

--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/AbstractInputFieldWFeedbackAndCaption.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/AbstractInputFieldWFeedbackAndCaption.html
@@ -21,12 +21,13 @@ limitations under the License.
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link href="TextFieldWFeedback.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <wicket:panel>
             <div class="control-group">
                 <!-- replace input tage with <wicket:child/>  which will be replaced in child derived compnoent -->
-                <!--input class="form-control" placeholder="User Name" wicket:id="inputComponent"/-->
+                <!--input class="form-control" placeholder="User Name" wicket:id="inputComponent"-->
                 <wicket:child/>
                 <label class="control-label" for="inputComponent" wicket:id="fieldCaption">User Name</label>
                 <div  wicket:id="errorMessage"></div>
