--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/PasswordTextFieldWFeedbackAndCaption.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/TextFieldWithMessage/PasswordTextFieldWFeedbackAndCaption.html
@@ -22,7 +22,7 @@ limitations under the License.
     </head>
     <body>
         <wicket:extend>
-            <input type="email" wicket:id="inputComponent" minlength="8"/>
+            <input type="password" wicket:id="inputComponent" minlength="8"/>
         </wicket:extend>
     </body>
 </html>
