added filterName partmeter to WebFilter Annotaion Signed-off-by:pembertonc <cedric.pemberton@gmail.com>

--- a/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/SignIn/SignInPanel.html
@@ -14,11 +14,13 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link href="../../../../../../../webapp/resources/css/w3.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../../../../../webapp/resources/css/w3-theme.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <wicket:panel>
@@ -30,7 +32,7 @@ limitations under the License.
 
                 <section class="w3-panel">
                     <div>
-                        <label for="username"> <b> Username </b> </label>
+                        <label for="username"> <strong> Username </strong> </label>
                         <input class="w3-input w3-transparent" wicket:id="userName" type="text" placeholder="Enter Username" name="username" required="true"/>
                         use Administrator
                     </div>
