moved to different folder

--- a/src/main/java/com/techmine/gs/ui/panels/custom_input_components/DropDownChoiceWFeedbackAndCaption.html
+++ b/src/main/java/com/techmine/gs/ui/panels/custom_input_components/DropDownChoiceWFeedbackAndCaption.html
@@ -14,22 +14,15 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html>
     <head>
         <title>TODO supply a title</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="TextFieldWFeedback.css" rel="stylesheet" type="text/css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <wicket:panel>
-            <div class="control-group">
-                <input class="form-control" placeholder="User Name" type="text" wicket:id="inputComponent" />
-                <label class="control-label" for="inputComponent" wicket:id="inputLabel">User Name</label>
-                <div  wicket:id="feedback"></div>
-            </div>
+    <wicket:panel>
 
-
-        </wicket:panel>
-    </body>
+    </wicket:panel>
+</body>
 </html>
