Created Dropdown Choice with feed back files not yet implmented

--- a/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
+++ b/src/main/java/com/techmine/gs/ui/panels/Menu/MenuPanel.html
@@ -34,8 +34,8 @@ limitations under the License.
                         <button class="w3-button">System <i class="material-icons">arrow_drop_down</i></button>
                         <div class="w3-dropdown-content w3-bar-block w3-dark-grey">
                             <a wicket:id="users" class="w3-bar-item w3-button w3-mobile">Users</a>
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Gas Types</a>
-                            <a href="#" class="w3-bar-item w3-button w3-mobile">Cylinders</a>
+                            <a id="gasTypes" class="w3-bar-item w3-button w3-mobile">Gas Types</a>
+                            <a wicket:id="cylinders" class="w3-bar-item w3-button w3-mobile">Cylinders</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">Customers</a>
                             <a href="#" class="w3-bar-item w3-button w3-mobile">System Setup</a>
 
