moved test related classes to correct packages

--- a/src/test/java/com/techmine/gs/ui/panels/custom_input_components/InputFieldWFeedbackAndCaptionTest$InputFieldWFeedbackACaptionTestingComponent.html
+++ b/src/test/java/com/techmine/gs/ui/panels/custom_input_components/InputFieldWFeedbackAndCaptionTest$InputFieldWFeedbackACaptionTestingComponent.html
@@ -23,7 +23,7 @@ limitations under the License.
     <body>
         <wicket:panel>
             <form wicket:id="testForm" id="testForm">
-                <span wicket:id="inputComponent"></span>
+                <span wicket:id="customComponent"></span>
                 <button wicket:id="submit"></button>
             </form>
         </wicket:panel>
